# auto-research-press

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WORKFLOW_IMPROVEMENTS.md  api_server.py  entrypoint.sh  export_to_web.py  pyproject.toml  railway.toml  requirements.txt  test_author_rebuttal.py  test_short_paper_benchmark.py  vercel.json
config/: models.json
docs/: IMPLEMENTATION_SUMMARY.md
docs/tasks/: lessons.md  todo.md
reports/: research-report.md
research_cli/: categories.py  cli.py  config.py  db.py  model_config.py  performance.py
research_cli/agents/: __init__.py  coauthor.py  data_analysis_agent.py  desk_editor.py  integration_editor.py  lead_author.py  moderator.py  paper_writer_agent.py  research_notes_agent.py  (+5 more)
scripts/: generate_og_image.py  pre-push  test_api_connections.py
tasks/: todo.md
tests/: test_author_response.py  test_category_classifier.py  test_claude_json_mode.py  test_e2e_diagnostic.py  test_fault_tolerance.py  test_gemini_flash_roles.py  test_gemini_streaming.py  test_integrity.py  test_llm_token_tracking.py  test_model_comparison.py  test_moderator_judgment.py  test_multi_stage_writing.py  test_new_features.py  test_research_notes_workflow.py  test_resume.py  test_reviewer_prompt.py  test_setup.py  test_short_paper_benchmark.py  test_source_retriever.py  test_team_pipeline.py
web/: about.html  admin.html  api-docs.html  apply.html  article.html  ask-topic.html  blog-reader.html  create-report.html  index.html  login.html  my-research.html  research-queue.html  review.html  script.js  styles.css  submit.html
(+512 files in other folders)
